# kaggle_benetech

./: .gitignore  pyproject.toml
notebooks/: 01_data_loading.ipynb  02_chart_type_prediction.ipynb  02_keypoint_prediction.ipynb  02_keypoints_vbar.ipynb  02_skimage.ipynb  02_train_keras_orc.ipynb  02_train_keras_orc2.ipynb  03_vbarplot_prediction.ipynb  common.py  cv2_examples.ipynb  easyocr_examples.ipynb  kerasocr_examples.ipynb  paddle_examples.ipynb  pytesseract_examples.ipynb
notebooks/models/charttype_prediction_1.tf/: fingerprint.pb  keras_metadata.pb  saved_model.pb
notebooks/models/charttype_prediction_1.tf/variables/: variables.data-00000-of-00001  variables.index
notebooks/models/custom_ocr_1.tf/: fingerprint.pb  keras_metadata.pb
notebooks/models/custom_ocr_1.tf/variables/: variables.index
notebooks/models/key_points_1.tf/: fingerprint.pb  keras_metadata.pb  saved_model.pb
notebooks/models/key_points_1.tf/variables/: variables.data-00000-of-00001  variables.index
