[tool.poetry]
name = "benetech"
version = "0.1.0"
description = ""
authors = ["Jaume Ferrarons <jaume.ferrarons@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
pandas = "^1.5.3"
tqdm = "^4.65.0"
seaborn = "^0.12.2"
multiprocess = "^0.70.14"
ipywidgets = "^8.0.5"
pyarrow = "^11.0.0"
scikit-image = "^0.20.0"
keras-ocr = "^0.9.2"
easyocr = "^1.6.2"
pytesseract = "^0.3.10"
transformers = "^4.27.3"
datasets = "^2.10.1"
tensorflow = "^2.12.0"
scikit-learn = "^1.2.2"

[tool.poetry.dev-dependencies]
ipykernel = "^6.22.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
